CNCF/Argo/resource/nodeport-argocd.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080  # 원하는 NodePort, 범위: 30000-32767
    - name: https
      port: 443
      targetPort: 8080
      nodePort: 30443  # 원하는 NodePort
